--- a/Exercicios/ex026/mq004/styles/media-query.css
+++ b/Exercicios/ex026/mq004/styles/media-query.css
@@ -2,3 +2,78 @@
 
 /* Todas as demais mídias */
 
+
+/* IMPRESSORA */
+@media print {
+
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feita através do site www.cursoemvideo.com';
+        text-decoration: overline;
+        font-size: .7em;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/*TABLET  */
+@media screen and (min-width: 768px) and (max-width: 992px)  {
+
+    body {
+        background-image: url(../images/back-tablet.jpg);
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/* PC */
+@media screen and (min-width: 992px) and (max-width:1200px) {
+
+body {
+    background-image: url(../images/back-pc.jpg);
+}
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+/* TV */
+@media screen and (min-width: 1200px) {
+
+    body {
+        background-image: url(../images/back-tv.jpg);
+    }
+
+    main {
+        width:900px;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+}
