--- a/Exercicios/ex026/mq004/styles/style.css
+++ b/Exercicios/ex026/mq004/styles/style.css
@@ -22,7 +22,7 @@ body {
 
 main {
     background-color: rgba(255, 255, 255, 0.842);
-    width: 80vw;
+    max-width: 80vw;
     margin: auto;
     margin-top: 20px;
     border-radius: 10px;
@@ -41,10 +41,8 @@ img {
     margin: auto;
 }
 
-img#phone {
-    display: block;
-}
-
-img#tablet, img#print, img#pc, img#tv {
-    display: none;
-}
+img#phone {display: block;}
+img#tablet {display: none;}
+img#print {display: none;}
+img#pc {display: none;}
+img#tv {display: none;}
