--- a/Exercicios/ex026/mq005/style/mobile-first.css
+++ b/Exercicios/ex026/mq005/style/mobile-first.css
@@ -19,8 +19,22 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+span#burger {
+    background-color: rgb(42, 42, 42);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+}
+
+span#burger:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
