--- a/Exercicios/ex026/mq005/style/media-query.css
+++ b/Exercicios/ex026/mq005/style/media-query.css
@@ -1,1 +1,23 @@
 @charset "UTF-8";
+
+@media print {
+    
+}
+
+@media screen and ( min-width: 768px) {
+    span#burger { 
+        display: none;
+    }   
+    
+    menu {
+        display: block;
+    }
+
+    menu > ul > li {
+        display: inline-block;
+    }
+
+    main {
+        width: 748px;
+    }
+}
