--- a/Exercicios/ex027/flex013/style.css
+++ b/Exercicios/ex027/flex013/style.css
@@ -11,8 +11,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     background-color: lightgray;
-    height: 100vh;
-    width: 100vw;
+    
 } 
 
 header {
@@ -39,6 +38,7 @@ header > nav a {
     padding: 10px;
     margin: 3px;
     border-radius: 5px;
+    transition: background-color .5s;
 }
 
 header > nav a:hover {
@@ -46,30 +46,43 @@ header > nav a:hover {
 }
 
 main {
-    margin: 10px;
+    width: 470px;
+    margin: 10px auto;
     padding: 10px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.477);
+    transition: width .2s;
+}
+
+main > h2 {
+    text-align: center;
+}
+
+main > p {
+    text-indent: 20px;
 }
 
 
-@media screen and (min-width:576px)  {
+@media screen and (min-width:650px)  {
     header {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
+        
     }
 
     header > nav {   
         display: flex;
         flex-flow: row nowrap;
-        justify-content: flex-end;   
+        justify-content: flex-end;  
+         
     }
 
     main {
-        width: 556px;
-        margin: auto;
+        width: 630px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
